@@ -257,6 +257,7 @@ char		*utf8_nth(char*, size_t);
 int		 parse_iri(char*, struct iri*, const char**);
 int		 trim_req_iri(char*, const char **);
 int		 serialize_iri(struct iri*, char*, size_t);
+char		*pct_decode_str(char *);
 
 /* puny.c */
 int		 puny_decode(const char*, char*, size_t, const char**);
